dex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  labels:
    app: dex
spec:
  selector:
    app: dex
  ports:
    - port: 5556
      targetPort: 5556
      name: http
