dex/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dex
  labels:
    app: dex
spec:
  to:
    kind: Service
    name: dex
  port:
    targetPort: 5556
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
